Abstract, introduction, and approach/implementation sections of paper written

--- a/paper/flocking_simulator.tex
+++ b/paper/flocking_simulator.tex
@@ -1,6 +1,13 @@
 \documentclass[10pt, twocolumn]{article}
 \usepackage{titling}
 \usepackage{fullpage}
+\usepackage{multicol}
+
+\usepackage[american]{babel}
+\usepackage[babel=true]{csquotes}
+\usepackage[backend=bibtex]{biblatex}
+
+\addbibresource{references.bib}
 
 \title{Massively Parallel Agent-Based Flocking Simulation}
 \author{Kevin O'Neill and Mitchell Mellone}
@@ -28,4 +35,5 @@
 \section*{Conclusion}
 \input{conclusion.tex}
 
+\printbibliography[title=References]
 \end{document}
