--- a/paper/flocking_simulator.tex
+++ b/paper/flocking_simulator.tex
@@ -2,12 +2,14 @@
 \usepackage{titling}
 \usepackage{fullpage}
 \usepackage{multicol}
-
+\usepackage{graphicx}
 \usepackage[american]{babel}
 \usepackage[babel=true]{csquotes}
 \usepackage[backend=bibtex]{biblatex}
 
 \addbibresource{references.bib}
+
+\graphicspath{{../data/plots/}}
 
 \title{Massively Parallel Agent-Based Flocking Simulation}
 \author{Kevin O'Neill and Mitchell Mellone}
