--- a/paper/performance.tex
+++ b/paper/performance.tex
@@ -1,3 +1,12 @@
 \subsection*{Multi-Processing}
 
+\includegraphics[scale=0.35]{total_time.pdf}
+\includegraphics[scale=0.35]{comm_time.pdf}
+\includegraphics[scale=0.35]{compute_time.pdf}
+\includegraphics[scale=0.35]{total_speedup.pdf}
+
 \subsection*{Multi-Threading}
+\includegraphics[scale=0.35]{thread_speedup.pdf}
+
+\subsection*{Weak Scaling}
+\includegraphics[scale=0.35]{weakscaling.pdf}
