Paper updates, removed abs values

--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -11,5 +11,6 @@ MPI, we show that this simulation can be run efficiently in a
 high-performance computing setting. In addition to analyzing the
 accuracy of the flocking behavior demonstrated in the simulation
 through real-time visualizations, we analyze the strong scalability of
-the simulation with respect to process count as well as strong
-scalability with respect to process and thread count.
+the simulation with respect to process count, strong scalability with
+respect to process and thread count, and weak scalability with respect to
+increasing node count.
