--- a/paper/flocking_simulator.tex
+++ b/paper/flocking_simulator.tex
@@ -28,6 +28,9 @@
 \section*{Approach / Implementation}
 \input{approach.tex}
 
+\section*{Visualization}
+\input{visualization.tex}
+
 \section*{Performance Results}
 \input{performance.tex}
 
