--- a/paper/approach.tex
+++ b/paper/approach.tex
@@ -30,7 +30,6 @@ the rules to each bird after all calculations are complete. The
 separation of movement calculation and positional upating guarantees
 that all movement occurs simultaneously within a time-step.
 
-\newpage
 \begin{verbatim}
   for ( time-steps 0...t ) {
     for ( Bird b ) {
@@ -71,4 +70,9 @@ where an explicit representation would be parallelized by assigning
 each rank to a sector of the universe, the implicit representation
 assigns agents to ranks. Computation is then more evenly distributed
 between processes with the implicit representation, since with the
-explicit representation entire sectors of the universe could be empty.
+explicit representation entire sectors of the universe could be
+empty. However, we acknowledge that this benefit comes at a
+substantial cost in communication overhead. Since the neighbors of an
+agent can be maintained by any rank, each rank must receive a complete
+array of all agents in the universe. Ideally ranks would only need to
+gather agents which are relevant to its computation.
