Added plots to the visualization section

--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -13,4 +13,4 @@ accuracy of the flocking behavior demonstrated in the simulation
 through real-time visualizations, we analyze the strong scalability of
 the simulation with respect to process count, strong scalability with
 respect to process and thread count, and weak scalability with respect to
-increasing node count.
+increasing bird count.
