--- a/paper/flocking_simulator.tex
+++ b/paper/flocking_simulator.tex
@@ -3,6 +3,7 @@
 \usepackage{fullpage}
 \usepackage{multicol}
 \usepackage{graphicx}
+\usepackage{subcaption}
 \usepackage{placeins}
 \usepackage[american]{babel}
 \usepackage[babel=true]{csquotes}
@@ -10,7 +11,7 @@
 
 \addbibresource{references.bib}
 
-\graphicspath{{../data/plots/}}
+\graphicspath{{../data/plots/}{../data/snapshots/}}
 
 \title{Massively Parallel Agent-Based Flocking Simulation}
 \author{Kevin O'Neill and Mitchell Mellone}
