Added conditional graph compilation for latex build script

--- a/paper/visualization.tex
+++ b/paper/visualization.tex
@@ -52,6 +52,9 @@ a testament to the accuracy of the simulation--- over time, we find
 that these simple rules generate flocks which behave in a manner
 remarkably similar to real flocks of birds.
 
+Interestingly enough, these rules can also be used to produce emergent
+divergence of flocks which are too large.
+
 \begin{figure}[h!]
   \centering
   \begin{subfigure}{0.24\textwidth}
