--- a/paper/performance.tex
+++ b/paper/performance.tex
@@ -1,5 +1,11 @@
-\subsection*{Strong Scaling Study}
+Once our results were verified to be correct, we ran the simulation on
+RPI's BG/Q supercomputer, AMOS in order to quantify the benefits
+obtained through parallelization. Execution time was measured using a
+high-precision cycle counter, implemented in the simulation by Kevin
+O'Neill. Subsequent runs for analysis were then conducted and logged
+on AMOS by Mitchell Mellone.
 
+\subsection*{Strong Scaling Study}
 \begin{figure}[h!]
   \centering
   \includegraphics[width=\linewidth]{total_time.pdf}
