wrote conclusion and added references

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -14,5 +14,49 @@
  doi = {10.1145/37402.37406},
  acmid = {37406},
  publisher = {ACM},
- address = {New York, NY, USA},
-} 
+ address = {New York, NY, USA}
+}
+
+@article{Lee,
+author = {Lee, D.T. and Wong},
+title = {Worst-case analysis for region and partial region searches in multidimensional binary search trees and balanced quad trees},
+journal = {C.K. Acta Informatica},
+issue_date = {March 1977},
+volume = {9},
+issue = {1},
+month = mar,
+year = {1977},
+issn = {1432-0525},
+pages = {23-29},
+numpages = {7},
+url = {http://link.springer.com/article/10.1007%2FBF00263763},
+doi = {10.1007/BF00263763},
+publisher = {Springer-Verlag}
+}
+
+@article{Moere,
+author = {A.V. Moere},
+title = {Time-Varying Data Visualization Using Information Flocking Boids},
+journal= {IEEE Symposium on Information Visualization},
+issue_date = {October 2004},
+month = oct,
+year = {2004},
+issn = {1522-404X},
+url = {http://ieeexplore.ieee.org/document/1382896/},
+doi = {10.1109/INFVIS.2004.65},
+publisher = {IEEE}
+}
+
+@article{Ibáñez,
+author = {Jesús Ibáñez, Antonio F. Gómez-Skarmeta, and Josep Blat},
+title = {
+DJ-boids: emergent collective behavior as multichannel radio station programming},
+journal= {IUI '03 Proceedings of the 8th international conference on Intelligent user interfaces},
+issue_date = {January 2003},
+month = jan,
+year = {2003},
+url = {http://dl.acm.org/citation.cfm?doid=604045.604089},
+doi = {10.1145/604045.604089},
+publisher = {ACM},
+address = {New York, NY, USA}
+}
