Committing gif visualizations, renamed files for consistency

--- a/paper/visualization.tex
+++ b/paper/visualization.tex
@@ -14,22 +14,22 @@ of this is accomplished automatically in a run script.
   \centering
   \begin{subfigure}{0.24\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig1-0000.png}
+    \includegraphics[width=\textwidth]{example1-0000.png}
     \caption{Time = 0}
   \end{subfigure}
   \begin{subfigure}{0.24\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig1-0100.png}
+    \includegraphics[width=\textwidth]{example1-0100.png}
     \caption{Time = 100}
   \end{subfigure}
   \begin{subfigure}{0.24\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig1-0150.png}
+    \includegraphics[width=\textwidth]{example1-0150.png}
     \caption{Time = 150}
   \end{subfigure}
   \begin{subfigure}{0.24\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig1-0450.png}
+    \includegraphics[width=\textwidth]{example1-0450.png}
     \caption{Time = 450}
   \end{subfigure}
   
@@ -66,22 +66,22 @@ creating a larger number of more spacious flocks.
   \centering
   \begin{subfigure}{0.24\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig2-00.png}
+    \includegraphics[width=\textwidth]{example2-00.png}
     \caption{Time = 0}
   \end{subfigure}
   \begin{subfigure}{0.24\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig2-10.png}
+    \includegraphics[width=\textwidth]{example2-10.png}
     \caption{Time = 10}
   \end{subfigure}
   \begin{subfigure}{0.24\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig2-25.png}
+    \includegraphics[width=\textwidth]{example2-25.png}
     \caption{Time = 25}
   \end{subfigure}
   \begin{subfigure}{0.24\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{fig2-75.png}
+    \includegraphics[width=\textwidth]{example2-75.png}
     \caption{Time = 75}
   \end{subfigure}
   
