--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -60,3 +60,5 @@ Our techniques of using an implicitly defined universe and combining
 an optimal number of pthreads with MPI ranks provide a good base model that, if
 combined with some more advanced data structures and smart message passing, can
 be very effective for many of these uses.
+\bigskip\\
+The code for this project is on Mitchell Mellone's (mellom3) kratos account.
